# spore

./: .clangd  .gitignore  .gitmodules  Makefile  meson.build
bootloader/: main.c  uefi.h
cross/: aarch64-elf.ini
kernel/: linker.ld  meson.build
kernel/boot/: limine.conf  limine.conf.in
kernel/src/: cell.c  ext2.c  main.c  ramfs.c  vfs.c
kernel/src/arch/aarch64/: boot.S  exceptions.c  syscall.c  timer.c  (+1 more)
kernel/src/drivers/: pl011.c  virtio_blk.c  virtio_console.c  virtio_net.c
kernel/src/elf/: loader.c
kernel/src/exec/: stack.c
kernel/src/include/: boot_info.h  cell.h  ext2.h  kprintf.h  mem.h  net.h  pl011.h  ramfs.h  vfs.h  virtio_blk.h  virtio_console.h  virtio_net.h
kernel/src/lib/: mem.c
kernel/src/mm/: pmm.c  vma.c  vmm.c
kernel/src/net/: net.c
tests/: meson.build  test_abi.c  test_ext2.c  test_ipc_model.c  test_mycelium_model.c  test_pmm.c  test_ramfs.c  test_stack.c  test_vma.c
tools/: build_image.py  meson.build  run_qemu_input.py  run_qemu_shell.py
tools/src/: elf_clean_runpath.c  spore_image.c  spore_run.c
userland/: MIGRATION.md  README.md  coreutils.c  hello.c  image.manifest  meson.build  policy_tools.c  spore_v15_demo.c  spore_v2b_demo.c  spsh.c
userland/demos/signal-crash/: main.c
userland/etc/: dashrc  meson.build  motd  os-release.in  passwd  profile
userland/etc/fastfetch/: spore.logo
userland/etc/mycelium/: boot.target  console.service  multi-user.target  shutdown.target
userland/lib/ncurses/: build.sh
userland/lib/spore/: spore.h  util.c
userland/tests/integration/: exec_child.c  image.manifest  main.c
(+9 files in other folders)
